--- a/react_my_todo/src/index.scss
+++ b/react_my_todo/src/index.scss
@@ -1,6 +1,7 @@
 body {
-    background-color: #000000;
+    background-color: rgb(246, 250, 255);
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
