finish main layout

--- a/react_my_todo/src/components/user-to-do/UserToDo.module.scss
+++ b/react_my_todo/src/components/user-to-do/UserToDo.module.scss
@@ -19,3 +19,23 @@
         }
     }
 }
+
+.icon {
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+    margin-left: 20px;
+}
+
+.delete {
+    &:hover {
+        color: red;
+    }
+}
+
+.add {
+
+    :hover {
+        color: green;
+    }
+}
