--- a/redux-saga-thunk/src/App.css
+++ b/redux-saga-thunk/src/App.css
@@ -4,6 +4,24 @@
   border: 1px solid black;
   border-radius: 6px;
   padding: 20px;
-  margin: 0 auto;
+  margin: 40px auto;
   text-align: center;
+}
+
+.counter {
+  font-size: 40px;
+  font-weight: 400;
+}
+
+.control {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 80px;
+}
+
+.control button {
+  width: 60px;
+  height: 40px;
+  font-size: 24px;
+  font-weight: 400;
 }
