--- a/react_my_todo/src/components/user-to-do/UserToDo.module.scss
+++ b/react_my_todo/src/components/user-to-do/UserToDo.module.scss
@@ -20,13 +20,6 @@
     }
 }
 
-.icon {
-    width: 20px;
-    height: 20px;
-    cursor: pointer;
-    margin-left: 20px;
-}
-
 .delete {
     &:hover {
         color: red;
@@ -46,8 +39,16 @@
     width: 100%;
     justify-content: space-between;
     list-style: none;
+}
 
-    button {
-        margin-right: 20px;
+.icon {
+    cursor: pointer;
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+
+    &:hover {
+        color: red;
+
     }
 }
