--- a/react-hooks/src/App.css
+++ b/react-hooks/src/App.css
@@ -13,7 +13,7 @@
     border: none;
     color: green;
     transition: color .3s;
-    margin: 20px 0;
+    margin: 20px 10px 0 0;
 }
 
 .button:hover{
