--- a/top-up/styles/globals.css
+++ b/top-up/styles/globals.css
@@ -3,26 +3,28 @@ body {
 	margin: 0;
 	padding: 0;
 
-	font-family:
-		-apple-system,
-		BlinkMacSystemFont,
-		Segoe UI,
-		Roboto,
-		Oxygen,
-		Ubuntu,
-		Cantarell,
-		Fira Sans,
-		Droid Sans,
-		Helvetica Neue,
-		sans-serif;
+	color: var(--black);
+	background: #F5F6F8;
+
+	font-family: 'Noto Sans KR', sans-serif;
 }
 
 a {
 	text-decoration: none;
-
-	color: inherit;
 }
 
 * {
 	box-sizing: border-box;
+}
+
+:root {
+	--black: #3B434E;
+	--white: #FFF;
+	--primary: #7653FC;
+	--primary-hover: #6344DF;
+	--red: #FC836D;
+	--green: #1DC37E;
+	--green-light: #C8F8E4;
+	--gray-light: #EBEBEB;
+	--font-family: 'Noto Sans KR', sans-serif;
 }
