--- a/top-up/components/Button/Button.module.css
+++ b/top-up/components/Button/Button.module.css
@@ -5,24 +5,17 @@
 	padding: 10px;
 
 	cursor: pointer;
-
-	transition: all 0.2s;
 	text-align: center;
-
 	border: none;
 	border-radius: 5px;
 
 	font-size: 14px;
+	transition: all 0.2s;
 }
 
 .primary {
 	color: var(--white);
 	background-color: var(--primary);
-}
-
-.primary svg,
-.ghost:hover svg {
-	fill: var(--white);
 }
 
 .primary:hover {
@@ -31,23 +24,27 @@
 
 .ghost {
 	color: var(--black);
-	border: 1px solid var(--gray-light);
 	background: none;
+	border: 1px solid var(--gray-light);
 }
 
 .ghost:hover {
 	color: var(--white);
-	background: var(--primary);
+	background-color: var(--primary);
 }
 
 .arrow {
 	display: inline-block;
 
 	margin-left: 10px;
-
-	transition: all 0.2s;
 }
 
 .down {
 	transform: rotate(90deg);
+	transition: all 0.2s;
+}
+
+.primary svg,
+.ghost:hover svg {
+	fill: var(--white);
 }
