--- a/top-up/styles/globals.css
+++ b/top-up/styles/globals.css
@@ -11,6 +11,8 @@ body {
 
 a {
 	text-decoration: none;
+
+	color: inherit;
 }
 
 * {
@@ -19,12 +21,12 @@ a {
 
 :root {
 	--black: #3B434E;
-	--white: #FFF;
+	--gray-light: #EBEBEB;
+	--white: white;
 	--primary: #7653FC;
-	--primary-hover: #6344DF;
+	--primary-hover: #6344df;
 	--red: #FC836D;
 	--green: #1DC37E;
 	--green-light: #C8F8E4;
-	--gray-light: #EBEBEB;
 	--font-family: 'Noto Sans KR', sans-serif;
 }
