Fixed fonts, finished component Navbar

--- a/store/client/src/global-styles/_fonts.scss
+++ b/store/client/src/global-styles/_fonts.scss
@@ -1,5 +1,15 @@
+// There Brat 
 @font-face {
-    font-family: "Molika";
-    src: url('../fonts/molika/MOLIKA.ttf');
+    font-family: "There Brat";
+    font-display: block;
+    src: url('../fonts/there-brat/There\ Brat.ttf');
+    font-weight: normal;
+}
+
+// Hangover
+@font-face {
+    font-family: "Hangover";
+    font-display: block;
+    src: url('../fonts/hangover/Hangover.otf');
     font-weight: normal;
 }
