--- a/store/client/src/global-styles/_variables.scss
+++ b/store/client/src/global-styles/_variables.scss
@@ -1,2 +1,8 @@
 // Fonts
-$molika: 'Molika', sans-serif;
+$brat: 'There Brat', sans-serif;
+$hangover: 'Hangover', sans-serif;
+
+// Colors
+$white: #F6F9F9;
+$black: #151D1C;
+$aqua-island: #7DA4A8;
