--- a/store/client/src/components/navbar/Navbar.scss
+++ b/store/client/src/components/navbar/Navbar.scss
@@ -1,6 +1,55 @@
 .navbar {
-    font-family: $molika;
-}
-.center {
-    font-family: $molika;
+    height: 80px;
+    .wrapper {
+        padding: 10px 30px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        .item {
+            display: flex;
+            align-items: center;
+        }
+
+        .left, .right {
+            display: flex;
+            align-items: center;
+            gap: 25px;
+        }
+
+        .center {
+            .link {
+                font-family: $brat;
+                font-size: 30px;
+                letter-spacing: 2px;
+            }
+        }
+
+        .icons {
+            display: flex;
+            align-items: center;
+            gap: 15px;
+            cursor: pointer;
+        }
+
+        .cart-icon {
+            position: relative;
+            span {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                position: absolute;
+                right: -4px;
+                top: -6px;
+                font-size: 12px;
+                width: 14px;
+                height: 16px;
+                border-radius: 50%;
+                background-color: $aqua-island;
+                color: $white;
+                font-family: sans-serif;
+                font-weight: 700;
+            }
+        }
+    }
 }
