--- a/store/client/src/components/navbar/Navbar.scss
+++ b/store/client/src/components/navbar/Navbar.scss
@@ -22,6 +22,7 @@
                 font-family: $brat;
                 font-size: 30px;
                 letter-spacing: 2px;
+                color: $blue;
             }
         }
 
