--- a/store/client/src/global-styles/_global-styles.scss
+++ b/store/client/src/global-styles/_global-styles.scss
@@ -4,13 +4,9 @@
     color: $black;
 }
 
-html {
-    background-color: #D9AFD9;
-    background-image: linear-gradient(0deg, #D9AFD9 0%, #97D9E1 100%);
-}
-
-h1,h2,h3 {
+h1,h2,h3, .link {
     font-family: $brat;
+    letter-spacing:2px;
 }
 
 .link {
