--- a/store/client/src/global-styles/_variables.scss
+++ b/store/client/src/global-styles/_variables.scss
@@ -6,3 +6,6 @@ $hangover: 'Hangover', sans-serif;
 $white: #F6F9F9;
 $black: #151D1C;
 $aqua-island: #7DA4A8;
+$blue: #1E90FF;
+$silver: #C0C0C0;
+$slategrey: #708090;
