--- a/store/client/src/components/navbar/Navbar.scss
+++ b/store/client/src/components/navbar/Navbar.scss
@@ -46,7 +46,7 @@
                 width: 14px;
                 height: 16px;
                 border-radius: 50%;
-                background-color: $aqua-island;
+                background-color: $blue;
                 color: $white;
                 font-family: sans-serif;
                 font-weight: 700;
