--- a/store/client/src/components/slider/Slider.scss
+++ b/store/client/src/components/slider/Slider.scss
@@ -1,6 +1,7 @@
 .slider {
+    max-width: 100vw;
     height: calc(100vh - 80px);
-    width: 100vw;
+    overflow: hidden;
     position: relative;
 
     .container {
