Create List component and changed Contact, Products components

--- a/store/client/src/components/contact/Contact.scss
+++ b/store/client/src/components/contact/Contact.scss
@@ -53,3 +53,11 @@
         fill: $green;
     }
 }
+
+.format-text {
+    @extend %brat-styles;
+}
+
+input.format-text::placeholder {
+    font-size: 12px;
+}
