--- a/store/client/src/global-styles/_variables.scss
+++ b/store/client/src/global-styles/_variables.scss
@@ -11,3 +11,10 @@ $silver: #C0C0C0;
 $slategrey: #708090;
 $red: #FF4500;
 $green: #08a448;
+
+// Shared
+
+%brat-styles {
+    font-family: $brat;
+    letter-spacing: 2px;
+  }
