--- a/employees/client/src/components/header/Header.module.css
+++ b/employees/client/src/components/header/Header.module.css
@@ -1,6 +1,6 @@
 .header {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     padding: 20px 0;
     align-items: center;
     margin-bottom: 20px;
